Update API to work with latest logbooks server (#4)
Fixes #3